tests/fixtures/invalid/const_aggregate_pointer_index_write.c
struct Point {
    int x;
    int y;
};

int main(void) {
    struct Point points[2] = {{1, 2}, {3, 4}};
    const struct Point *p = &points[0];
    p[1].x = 9;
    return points[1].x;
}
